# TOMATODO_QtQuick

./: .gitignore  README.md
Installer/: .gitignore
TOMATODO/: .gitignore  CMakeLists.txt  DatabaseTomatodoUtils.cpp  DatabaseTomatodoUtils.h  TomatodoUtils.cpp  TomatodoUtils.h  assets.qrc  main.cpp  main.qml  qml.qrc  taskcarditemlist.cpp  taskcarditemlist.h  tomatodoApp.rc  tomatodotaskitem.cpp  tomatodotaskitem.h
TOMATODO/db/: tomatodoDB.db
TOMATODO/qml/components/: AddTaskButton.qml  CalendarCustom.qml  CalendarDayCustom.qml  DatePicker.qml  DeadlineBox.qml  DetailTextBox.qml  DropdownBox.qml  IconButton.qml  NumberRoundedBox.qml  PomodoroCircle.qml  PomodoroInfoTaskCard.qml  PomodoroPicker.qml  RoundTick.qml  RoundedButton.qml  TaskCard.qml  TitleApp.qml  TomatodoCalendar.qml  TomatodoSystemTrayIcon.qml
TOMATODO/qml/screen/: DetailScreen.qml  HomeScreen.qml  PomodoroScreen.qml  SettingsScreen.qml  TestComponent.qml
TOMATODO/qml/screen/layout/: TopLayout.qml
TOMATODO/qml/style/: ColorStyle.qml  FontStyle.qml  qmldir
TOMATODO/translations/: english.ts  trans_vn.ts  vietnamese.ts
